
syntax = "proto3";

package transaction;

message Request {
  string id = 1;
  TransactionUpdate update = 2;
}

message Transaction {
  string id = 1;
  string status = 2;
  string project = 3;
}

message TransactionUpdate {
  optional int32 retry = 1;
  optional string status = 2;
  optional string error = 3;
  optional paymentDetailMess paymentDetail = 4;
}

message paymentDetailMess{
  string transactionFee =1;
}